2009-11-03  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix minor portability issue.
	
	* tools/include/svp/compiler.h: Rewrite definition of `use()' to
	make it portable.

2009-10-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Cosmetic fixes for `slt'.
	
	* tools/bin/slt.in: Improve readability of test log. 

2009-10-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Cosmetic fixes for `slr'.
	
	* tools/bin/slr.in: Do not complain about `-n' being used if it
	specifies multiple places. (requested by M. Hicks)

	* tools/lib/r-mtsparc-sim.sh.in, 	
	* tools/lib/r-mtsparc-sim.sh.in: Allow `SIMARGS' to override
	`-n'. (requested by M. Hicks)	

2009-10-21  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix bug in shared handling in `ppp' target.

	The latest changesets allowed the `fibonacci' demo program to fail
	by letting an alias to the incoming dependent leak to the outgoing
	write, causing no dependent read to actually occur in the location
	defined by the source program. Synchronization was thus not
	achieved properly.
	
	* tools/lib/t-pppalpha/include/sl_support.h: Clobber the dependent
	in `sl_setp', albeit at a different place than initially.

2009-10-21  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Slight optimization MT-Alpha code generation.
	
	* tools/bin/spp (pppalpha): Allow `end' immediately after a branch.

2009-10-21  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Re-optimize accesses to shareds in `ppp' target.

	The previous changeset was required to prevent incorrect code, but
	would also require a temporary register in all cases, including
	the simple `sl_setp(x, sl_getp(x) + 1)' which should instead be
	optimized to a single instruction. This changeset reintroduces
	this optimization opportunity.
	
	* tools/lib/t-pppalpha/include/sl_support.h: Remove superfluous
	clobber of the incoming shared just before a write to the
	outgoing. (but still clobber it afterwards)

2009-10-20  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix support for shareds in `ppp' target.
