@@ -1,3 +1,13 @@
+2009-11-04  Raphael 'kena' Poss  <r.c.poss@uva.nl>
+
+	Optimize the `ptl' target.
+	
+	* tools/lib/host-host-ptl/include/create.tpl,
+	* tools/lib/host-host-ptl/include/ptl_svp.h,
+	* tools/lib/host-host-ptl/ptl_svp.cc,
+	* tools/lib/t-ptl/simpl.m4: Get rid of references to
+	`squeeze'. Use `long' for index values.
+
 2009-11-03  Raphael 'kena' Poss  <r.c.poss@uva.nl>
 
 	Fix minor portability issue.
